--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -11,3 +11,8 @@
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+
+@mixin mask-image($deg, $start, $end) {
+  -webkit-mask-image: linear-gradient($deg, transparent 0%, transparent $start, black $end);
+  mask-image: linear-gradient($deg, transparent 0%, transparent $start, black $end);
+}
